Aumentando cobertura de testes e outras correcoes.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,13 @@ addopts = -p no:warnings
 
 [coverage:run]
 branch = True
-source = app
+source =
+        app/controllers/
+        app/dao/
+        app/errors/
+        app/logger/
+        app/models/
+        app/resources/
 
 [flake8]
 exclude = templates, docs, app/__init__.py
