--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,59 @@
 alembic==1.4.2
-aniso8601==3.0.2
-appdirs==1.4.3
-atomicwrites==1.2.1
-attrs==18.2.0
+aniso8601==8.0.0
+appdirs==1.4.4
+atomicwrites==1.4.0
+attrs==19.3.0
 black==19.10b0
-click==6.7
-coverage==4.5.1
+click==7.1.2
+coverage==5.1
 entrypoints==0.3
-flake8==3.7.9
-Flask==1.0.2
-Flask-Cors==3.0.6
-flask-marshmallow==0.11.0
+flake8==3.8.3
+Flask==1.1.2
+Flask-Cors==3.0.8
+flask-marshmallow==0.13.0
 Flask-Migrate==2.5.3
-Flask-RESTful==0.3.6
-Flask-SQLAlchemy==2.3.2
-gevent==1.4.0
-greenlet==0.4.15
-gunicorn==19.9.0
-itsdangerous==0.24
-Jinja2==2.10.1
-jsonschema==2.6.0
-Mako==1.1.2
-MarkupSafe==1.1.0
-marshmallow==2.15.6
-marshmallow-sqlalchemy==0.22.3
+Flask-RESTful==0.3.8
+Flask-SQLAlchemy==2.4.3
+gevent==20.6.2
+greenlet==0.4.16
+gunicorn==20.0.4
+importlib-metadata==1.6.1
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jsonschema==3.2.0
+Mako==1.1.3
+MarkupSafe==1.1.1
+marshmallow==3.6.1
+marshmallow-sqlalchemy==0.23.1
 mccabe==0.6.1
-mistune==0.8.3
-more-itertools==4.3.0
-pathspec==0.7.0
-pluggy==0.7.1
-py==1.6.0
-pycodestyle==2.5.0
-pyflakes==2.1.1
-pytest==3.8.0
+mistune==0.8.4
+more-itertools==8.4.0
+packaging==20.4
+pathspec==0.8.0
+pluggy==0.13.1
+py==1.8.2
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pyparsing==2.4.7
+pyrsistent==0.16.0
+pytest==5.4.3
 python-dateutil==2.8.1
-python-dotenv==0.12.0
+python-dotenv==0.13.0
 python-editor==1.0.4
-pytz==2018.5
-PyYAML==5.1
-regex==2020.2.20
-simplejson==3.16.0
-six==1.11.0
-SQLAlchemy==1.3.6
-style==1.1.0
-toml==0.10.0
+pytz==2020.1
+PyYAML==5.3.1
+regex==2020.6.8
+simplejson==3.17.0
+six==1.15.0
+SQLAlchemy==1.3.17
+style==1.1.6
+toml==0.10.1
 typed-ast==1.4.1
-urllib3==1.25.3
-waitress==1.4.3
-Werkzeug==0.15.3
+update==0.0.1
+urllib3==1.25.9
+waitress==1.4.4
+wcwidth==0.2.4
+Werkzeug==1.0.1
+zipp==3.1.0
+zope.event==4.4
+zope.interface==5.1.0
