--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ pyflakes==2.2.0
 pyparsing==2.4.7
 pyrsistent==0.16.0
 pytest==5.4.3
+pytest-cov==2.10.0
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-editor==1.0.4
