Corrigindo arquivos a serem omitidos durante report do coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,11 @@
 [tool:pytest]
 testpaths = tests
-addopts = -p no:warnings
+addopts = -p no:warnings --cov=app
 
 [coverage:run]
 branch = True
-source =
-        app/controllers/
-        app/dao/
-        app/errors/
-        app/logger/
-        app/models/
-        app/resources/
+source = app/
+omit = app/patched.py,app/__init__.py
 
 [flake8]
 exclude = templates, docs, app/__init__.py
