--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,20 @@
 [tool:pytest]
 testpaths = tests
-addopts = -p no:warnings --cov=app
+addopts = -x -p no:warnings
 
 [coverage:run]
 branch = True
 source = app/
-omit = app/patched.py,app/__init__.py
+omit = app/__init__.py
 
 [flake8]
-exclude = templates, docs, app/__init__.py
+exclude = app/templates, app/__init__.py, migrations/, docs/
+
+[tool:isort]
+known_first_party = app,tests
+skip = migrations
+atomic = true
+line_length = 79
+multi_line_output = 3
+use_parentheses = true
+not_skip = __init__.py
