--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-dynaconf
 alembic==1.4.2
 aniso8601==8.0.0
 appdirs==1.4.4
@@ -7,6 +6,7 @@ attrs==19.3.0
 black==19.10b0
 click==7.1.2
 coverage==5.1
+dynaconf==2.2.3
 entrypoints==0.3
 flake8==3.8.3
 Flask==1.1.2
@@ -19,6 +19,7 @@ gevent==20.6.2
 greenlet==0.4.16
 gunicorn==20.0.4
 importlib-metadata==1.6.1
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonschema==3.2.0
@@ -39,6 +40,7 @@ pyparsing==2.4.7
 pyrsistent==0.16.0
 pytest==5.4.3
 pytest-cov==2.10.0
+python-box==3.4.6
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 python-editor==1.0.4
